@@ -6,6 +6,7 @@
  * added diverting from CHECK_PKG_CONFIG to CHECK_CONFIG.
  * added data file for specific config tool options.
  * added support for specific config tool options (huge).
+ * finalized pkgconfig support.
 
 01 Jan 2004 mipsator
  * added pkg_cell_add() and pkg_mod_exists() in pkgconfig.
